# game-inventory

./: CMakeLists.txt  README.md  game-inventory.pro
src/: database.cpp  database.h  gamemenu.cpp  gamemenu.h  inventory.cpp  inventory.h  inventoryslot.cpp  inventoryslot.h  item.cpp  item.h  itemgenerator.cpp  itemgenerator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  playingfield.cpp  playingfield.h  resources.qrc
